bk_ida/gccida/c0/init_reload
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:933:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v0; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:935:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:939:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:940:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:943:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:946:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:950:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // [rsp+10h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:951:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // [rsp+14h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:953:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // [rsp+20h] [rbp-50h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:990:37: error: use of undeclared identifier 'off_88ECD0'
v9 = gen_rtx_fmt_s( SYMBOL_REF, v7, off_88ECD0); 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/reload1.c:1012:22: error: subscripted value is not an array, pointer, or vector
double_reg_address_ok[0] = 1; 
~~~~~~~~~~~~~~~~~~~~~^~
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_reload/src/obj/reload1.o] Error 1
